Improved particles on all versions
Fixed certainly blocks not rendering properly on 1.12
Fixed blocks not being placed in the correct orientation on 1.12
Removed test textures still on some version
Update iron pole texture
Suppressed several unnecessary warnings
Removed issue with unchecked cast in block registration
Improved JavaDoc on 1.16

Signed-off-by: InterurbanDev <72585301+InterurbanDev@users.noreply.github.com>