@@ -12,6 +12,7 @@ import net.minecraft.world.level.material.Material;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import static dev.interurban.RailroadBlocks.MOD_ID;
 
@@ -22,7 +23,7 @@ public class BlockRegister {
 
     public static final DeferredRegister<Block> BLOCKS = DeferredRegister.create(MOD_ID, Registry.BLOCK_REGISTRY);
 
-    private static final List<RegistrySupplier<Block>> BLOCK_LIST = new ArrayList<>();
+    private static final List<RegistrySupplier<? extends Block>> BLOCK_LIST = new ArrayList<>();
 
     // Block List
     public static final RegistrySupplier<CrossingLightBlock> CROSSING_LIGHT = register("crossing_light", () ->
@@ -72,17 +73,15 @@ public class BlockRegister {
             ));
 
     // The following is to enable Forge/NeoForge to access the list of all blocks.
-    private static <T extends Block> RegistrySupplier<T> register(
-            String name, Supplier<T> supplier
-    ) {
-        RegistrySupplier<T> entry = BLOCKS.register(name, supplier);
-        BLOCK_LIST.add((RegistrySupplier<Block>) entry);
-        return entry;
+    private static <T extends Block> RegistrySupplier<T> register(String name, Supplier<T> supplier) {
+        RegistrySupplier<T> block = BLOCKS.register(name, supplier);
+        BLOCK_LIST.add(block);
+        return block;
     }
 
     public static Iterable<Block> getBlockList() {
         return BLOCK_LIST.stream()
                 .map(RegistrySupplier::get)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
